[project]
name = "dbt_cloud_multi_operator"
requires-python = ">=3.10,<3.15"
version = "0.1.0"
dependencies = [
    "dagster==1.12.22",
    "dagster-databricks>=0.28.22",
    "dagster-dbt>=0.28.22",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
force-include = { "pyproject.toml" = "pyproject.toml" }

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dbt_cloud_multi_operator"
registry_modules = [
    "dbt_cloud_multi_operator.components.*",
]


